Fix spacing on entry title.

--- a/res/screen.css
+++ b/res/screen.css
@@ -345,14 +345,14 @@ a.post-excerpt {
 /* photo post */
 
 div.content.photo-post {
-  padding-top: 60px;
+  padding-top: 0px;
 }
   div.content.photo-post p:first-child, div.content.photo-post img:first-child {
     padding-top:0;
     margin-top:0;
   }
   div.content.photo-post p, div.content.photo-post iframe {
-    padding: 40px 0 0 0;
+    padding: 0px 0 0 0;
     margin:0;
   }
 /*div.content.photo-post {
